--- a/app/src/main/res/layout/findvedio_layout.xml
+++ b/app/src/main/res/layout/findvedio_layout.xml
@@ -1,15 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/findvedio_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:textSize="40dp"
-    android:text="FindVedio"/>
+        android:layout_height="match_parent"
+        android:background="@color/GRAY"/>
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiprefreshlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+                <com.google.android.material.appbar.AppBarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fadingEdge="none"
+                    app:elevation="0dp">
+
+                    <com.google.android.material.appbar.CollapsingToolbarLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fitsSystemWindows="true"
+                        app:contentScrim="?attr/colorPrimary"
+                        app:expandedTitleMarginEnd="64dp"
+                        app:expandedTitleMarginStart="48dp"
+                        app:layout_scrollFlags="scroll">
+                        <ImageView
+                            android:id="@+id/findvedio_background1"
+                            android:layout_width="match_parent"
+                            android:src="@color/GRAY"
+                            android:layout_height="300dp"
+                            android:scaleType="centerCrop"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="300dp"
+                            android:orientation="vertical">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="20dp"
+                                android:layout_marginLeft="23dp"
+                                android:layout_marginTop="10dp"
+                                android:text="推荐MV"
+                                android:textColor="@color/drak"
+                                android:textSize="16dp" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="145dp"
+                                android:orientation="horizontal">
+
+                                <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
+                                    android:id="@+id/player_list_video1"
+                                    android:layout_width="150dp"
+                                    android:layout_height="120dp"
+                                    android:layout_marginLeft="23dp"
+                                    android:layout_marginTop="10dp" />
+
+                                <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
+                                    android:id="@+id/player_list_video2"
+                                    android:layout_width="150dp"
+                                    android:layout_height="120dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginTop="10dp" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="150dp"
+                                android:orientation="horizontal">
+
+                                <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
+                                    android:id="@+id/player_list_video3"
+                                    android:layout_width="150dp"
+                                    android:layout_height="120dp"
+                                    android:layout_marginLeft="23dp"
+                                    android:layout_marginTop="0dp" />
+
+                                <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
+                                    android:id="@+id/player_list_video4"
+                                    android:layout_width="150dp"
+                                    android:layout_height="120dp"
+                                    android:layout_marginLeft="15dp"
+                                    android:layout_marginTop="0dp" />
+                            </LinearLayout>
+                        </LinearLayout>
+                    </com.google.android.material.appbar.CollapsingToolbarLayout>
+                    <TextView
+                        android:id="@+id/text"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:text="更多MV"
+                        android:background="@color/GRAY"
+                        android:textColor="@color/drak"
+                        android:textSize="16dp" />
+                </com.google.android.material.appbar.AppBarLayout>
+
+
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="always"
+                    android:fillViewport="true"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:id="@+id/image"
+                            android:src="@color/GRAY"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                    </RelativeLayout>
+                </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
